# speculynx-cli

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  WORKLOG_2026-07-12.md  WORKLOG_2026-07-13_BETA_SCAN_COVERAGE_AND_CI.md  WORKLOG_2026-07-13_RELEASE_0.1.4.md  pyproject.toml
.github/workflows/: publish.yml
docs/: TRUSTED_PUBLISHING.md
src/speculynx/: __init__.py  dast.py  main.py  scanner.py  utils.py
tests/: test_ci_output.py  test_console_output.py  test_dast_safety.py  test_free_functional.py  test_license_verification.py  test_openapi_versions.py  test_pro_heuristics.py
tests/fixtures/: api_test.yaml  dast_methods.yaml  free_auth_present.yaml  free_http_server.yaml  free_https_server.yaml  free_key_expiration.yaml  free_key_no_expiration.yaml  free_key_query.yaml  free_missing_auth.yaml  free_no_key_query.yaml  openapi_admin_scoped.yaml  openapi_bola_protected.yaml  openapi_clean.yaml  openapi_pro_risky.yaml  openapi_public_health.yaml  openapi_rate_limited.yaml  openapi_secret_placeholders.yaml  openapi_sensitive_legitimate.yaml  openapi_ssrf_benign.yaml
