[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "speculynx"
version = "0.1.0"
description = "Local-first OpenAPI 3.0/3.1 security audit CLI"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "typer>=0.12,<1",
    "PyYAML>=6,<7",
    "httpx>=0.27,<1",
    "fpdf2>=2.7,<3",
    "keyring>=25,<26",
]

[project.scripts]
speculynx = "speculynx.main:app"

[tool.setuptools.packages.find]
where = ["src"]
